<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/">


    <TextView
        android:id="@+id/refreshRateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/refresh"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/spinnerRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:entries="@array/intervals_value"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_row="0"></Spinner>

    <TextView
        android:id="@+id/cacheSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/cacheSize"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerCache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:entries="@array/cache_size_value"
        android:layout_gravity="right"
        android:gravity="right"

        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/imageSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/imageSizeTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/imageSizeSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="right"
        android:entries="@array/quality_list"
        android:gravity="right"
        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:id="@+id/refreshButton"
        android:text="@string/refreshButtonTitle" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:id="@+id/clearButton"
        android:text="@string/clearButtonTitle" />
</GridLayout>